--- a/Project.toml
+++ b/Project.toml
@@ -3,10 +3,20 @@ uuid = "d2818e16-7729-416e-a683-becc19f3d01b"
 authors = ["Dilum Aluthge", "contributors"]
 version = "0.1.0-DEV"
 
+[deps]
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+JSONWebTokens = "9b8beb19-0777-58c6-920b-28f749fee4d3"
+URIs = "5c2747f8-b7ea-4ff2-ba2e-563bfd36b1d4"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
+HTTP = "0.9.3"
+JSON3 = "1.5.1"
+JSONWebTokens = "0.3.4"
+URIs = "1.2"
 julia = "1.4"
 
 [targets]
