--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SMARTAppLaunch"
 uuid = "d2818e16-7729-416e-a683-becc19f3d01b"
 authors = ["Dilum Aluthge", "contributors"]
-version = "1.0.1"
+version = "1.0.2"
 
 [deps]
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
@@ -14,7 +14,7 @@ URIs = "5c2747f8-b7ea-4ff2-ba2e-563bfd36b1d4"
 HTTP = "0.9.3"
 HealthBase = "1.0.1"
 JSON3 = "1.5.1"
-JSONWebTokens = "0.3.4"
+JSONWebTokens = "0.3.4, 1"
 URIs = "1.2"
 julia = "1.4"
 
