--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SMARTAppLaunch"
 uuid = "d2818e16-7729-416e-a683-becc19f3d01b"
 authors = ["Dilum Aluthge", "contributors"]
-version = "1.1.0-DEV"
+version = "1.1.0"
 
 [deps]
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
@@ -14,9 +14,9 @@ URIs = "5c2747f8-b7ea-4ff2-ba2e-563bfd36b1d4"
 HTTP = "0.9.3"
 HealthBase = "1.0.1"
 JSON3 = "1.5.1"
-JSONWebTokens = "0.3.4, 1"
+JSONWebTokens = "1"
 URIs = "1.2"
-julia = "1.4"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
