--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Dilum Aluthge", "contributors"]
 version = "2.0.0-DEV"
 
 [deps]
+Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 HealthBase = "94e1309d-ccf4-42de-905f-515f1d7b1cae"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
