--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SMARTAppLaunch"
 uuid = "d2818e16-7729-416e-a683-becc19f3d01b"
 authors = ["Dilum Aluthge", "contributors"]
-version = "2.1.0-DEV"
+version = "2.1.0"
 
 [deps]
 Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
